tests/baselines/reference/derivedClassOverridesPrivates.errors.txt
==== tests/cases/compiler/derivedClassOverridesPrivates.ts (2 errors) ====
    class Base {
        private x: { foo: string };
    }
    
    class Derived extends Base {
          ~~~~~~~
!!! derivedClassOverridesPrivates.ts(5,7): error TS2141: Class 'Derived' cannot extend class 'Base':
!!! 	Types 'Derived' and 'Base' define property 'x' as private.
        private x: { foo: string; bar: string; }; // error
    }
    
    class Base2 {
        private static y: { foo: string };
    }
    
    class Derived2 extends Base2 {
          ~~~~~~~~
!!! derivedClassOverridesPrivates.ts(13,7): error TS2141: Class 'Derived2' cannot extend class 'Base2':
!!! 	Types 'Derived2' and 'Base2' define static property 'y' as private.
        private static y: { foo: string; bar: string; }; // error
    }